# adascore

./: .gitignore  README.md  adascore.repos  applr_social_nav.repos
adascore/: CMakeLists.txt  package.xml
adjustments/: CMakeLists.txt
applr_social_nav/: CMakeLists.txt  package.xml  pause_navigation.xml
applr_social_nav/applr_social_nav/tasks/DumbNav/: applr_environment_social_controller.py  applr_social_controller.py
applr_social_nav/applr_social_nav/tasks/EndRL/: end_rl_controller.py  environment_end_rl_controller.py
applr_social_nav/applr_social_nav/tasks/SocialController/: applr_environment_social_controller.py  applr_social_controller.py  pic4rl_environment_social_controller (1).py  pic4rl_training_social_controller (1).py
applr_social_nav/applr_social_nav/tasks/SocialControllerCostmap/: applr_environment_social_controller.py  applr_social_controller.py
applr_social_nav/applr_social_nav/tasks/SocialForceWindow/: applr_environment_social_controller.py  applr_social_controller.py
applr_social_nav/applr_social_nav/tasks/SocialForceWindowReal/: applr_environment_social_cotroller.py  applr_social_controller.py
applr_social_nav/applr_social_nav/utils/: nav_utils.py  sfm.py  sfm1.py
applr_social_nav/behavior_trees/: bt_params.xml  navigate_through_poses.xml  navigate_to_pose.xml
applr_social_nav/config/agents_envs/: social_env_test.yaml  social_indoor_agents.yaml  social_indoor_agents2.yaml  social_indoor_agents3.yaml  social_indoor_agents4.yaml  social_nav.yaml  social_nav_obstacles.yaml  social_scenarios_agents.yaml
applr_social_nav/config/agents_envs/crossing/: agents.yaml
applr_social_nav/config/agents_envs/overtaking_group/: agents.yaml
applr_social_nav/config/agents_envs/passing/: agents.yaml
applr_social_nav/config/nav_params/: nav2_params.yaml  nav2_social_costmap.yaml  nav2_social_window.yaml  social_scenarios_nav_params.yaml
applr_social_nav/config/pic4rl_params/: main_params.yaml  test_metrics_params.yaml  testing_params.yaml  training_params.yaml
applr_social_nav/goals_and_poses/: social_env_test.json  social_nav.json  social_nav_obstacles.json  social_nav_obstacles_test.json  social_nav_test.json  social_scenarios.json  social_video_env3.json  social_video_env6.json
applr_social_nav/goals_and_poses/crossing/: social_nav_test.json
applr_social_nav/goals_and_poses/passing/: social_nav_test.json
applr_social_nav/goals_and_poses/saved_paths/: social_env_test_paths.json  social_nav_paths.json  social_nav_test_paths.json
applr_social_nav/include/applr_social_nav/: pause_navigation.hpp
applr_social_nav/launch/: OLD_Noe_social_scenarios.launch.py  bringup.launch.py  jackal_hunav.launch.py  jackal_social.launch.py  navigation.launch.py  pic4rl.launch.py
applr_social_nav/maps/: adaptive_test.yaml  corridor.pgm  corridor.yaml  experiment.pgm  experiment.yaml  indoor_adaptive.pgm  indoor_adaptive.yaml  map1.pgm  map1.yaml  map_indoor2.pgm  map_indoor2.yaml  map_social_scenarios.pgm  new_indoor.pgm  new_indoor.yaml  social_env_test_map.pgm  social_indoor.pgm  social_indoor.yaml  social_nav_map.pgm  social_nav_map.yaml  social_nav_obstacles_map.pgm  social_obstacles.yaml  social_small_map.yaml
applr_social_nav/rviz/: jackal.rviz
applr_social_nav/scripts/: dumb_nav_applr  end_rl_applr  social_controller_applr  social_controller_costmap_applr  social_force_window_applr  social_force_window_real_applr
applr_social_nav/src/: pause_navigation.cpp
applr_social_nav/worlds/: corridor.world  empty_cafe.world  experiment_room.world  indoor_adaptive2.world  new_indoor.world  social_env_test.world  social_nav.world  social_nav_obstacles.world  social_scenarios.world
dockerfiles/: gym_cuda.Dockerfile
maps/: adaptive_test.pgm  map1.yaml  (+5 more)
(+457 files in other folders)
