cmake_minimum_required(VERSION 3.8)
project(applr_social_nav)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclpy REQUIRED)
find_package(jackal_navigation REQUIRED)
find_package(hunav_sim REQUIRED)
find_package(std_srvs REQUIRED)
find_package(behaviortree_cpp_v3 REQUIRED)
find_package(rclcpp REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

set(dependencies
  std_srvs
  behaviortree_cpp_v3
  rclcpp
)

include_directories(
  include
)

add_library(pause_navigation_bt_node SHARED
  src/pause_navigation.cpp
)

ament_target_dependencies(pause_navigation_bt_node
  ${dependencies}
)

target_compile_definitions(pause_navigation_bt_node
  PRIVATE "BT_PLUGIN_EXPORT"
)

install(TARGETS
  pause_navigation_bt_node
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

install(DIRECTORY
  include/
  DESTINATION include/
)

install(FILES pause_navigation.xml
  DESTINATION share/${PROJECT_NAME}
)

install(DIRECTORY
  launch
  config
  maps
  behavior_trees
  goals_and_poses
  worlds
  DESTINATION share/${PROJECT_NAME}/
)

ament_export_include_directories(
  include
)


# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# Install Python executables
install(PROGRAMS
  scripts/social_controller_applr
  DESTINATION lib/${PROJECT_NAME}
)

ament_export_libraries(
  pause_navigation_bt_node)

ament_export_dependencies(${dependencies})



ament_package()
